[gd_scene load_steps=40 format=2]

[ext_resource path="res://Scenes/Login/Login.gd" type="Script" id=1]
[ext_resource path="res://Images/ts7vuoswhwf41.webp" type="Texture" id=2]
[ext_resource path="res://new_theme1.tres" type="Theme" id=3]
[ext_resource path="res://fonts/noto_sans_ui_regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Greathy 400.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Flying_object/Flying_object.tscn" type="PackedScene" id=6]
[ext_resource path="res://Images/arrow-small-left.png" type="Texture" id=7]
[ext_resource path="res://fonts/noto_sans_ui_bold.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.172549, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 5
border_width_top = 5
border_width_bottom = 5
border_color = Color( 0.309804, 0.662745, 0.529412, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_right = 5
border_color = Color( 0.309804, 0.662745, 0.529412, 1 )

[sub_resource type="DynamicFont" id=24]
size = 49
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_top = 14
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="DynamicFont" id=20]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 30
border_color = Color( 0.192157, 0.45098, 0.352941, 0.235294 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 4
border_color = Color( 0.309804, 0.662745, 0.529412, 1 )

[sub_resource type="DynamicFont" id=19]
size = 46
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.309804, 0.662745, 0.529412, 1 )
border_width_bottom = 10
border_color = Color( 0.192157, 0.45098, 0.352941, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.309804, 0.662745, 0.529412, 1 )
border_width_bottom = 4
border_color = Color( 0.192157, 0.45098, 0.352941, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Password_lineEdit:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 486, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RegNo_lineEdit:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 486, 48 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "pwd_active"
tracks/0/type = "value"
tracks/0/path = NodePath("Password_lineEdit:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 486, 48 ), Vector2( 84, 48 ), Vector2( 486, 48 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "reg_active"
tracks/0/type = "value"
tracks/0/path = NodePath("RegNo_lineEdit:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 486, 48 ), Vector2( 84, 48 ), Vector2( 486, 48 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Login_button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Login_button:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 189, 1372 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RegNo_label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -184, 564.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RegNo_lineEdit:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -184, 624 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "login_button_fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Login_button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1.45855, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Login_button:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1.48282, 0.544295, 1.77658 ),
"update": 0,
"values": [ Vector2( 189, 1292 ), Vector2( 189, 908 ), Vector2( 189, 938 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RegNo_label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -184, 564.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RegNo_lineEdit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -184, 624 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Password_label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -184, 732.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Password_lineEdit:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -184, 792 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Welcome_label:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -304, 612.5 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "credencials_fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("RegNo_label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.121529, 1 ),
"update": 0,
"values": [ Vector2( -184, 564.5 ), Vector2( 120, 564.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RegNo_lineEdit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.230652, 1 ),
"update": 0,
"values": [ Vector2( -184, 624 ), Vector2( 120, 624 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Password_label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.8 ),
"transitions": PoolRealArray( 0.121529, 1 ),
"update": 0,
"values": [ Vector2( -184, 732.5 ), Vector2( 120, 732.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Password_lineEdit:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.8 ),
"transitions": PoolRealArray( 0.230652, 1 ),
"update": 0,
"values": [ Vector2( -184, 792 ), Vector2( 120, 792 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "name_info_fade_in"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Welcome_label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 0.0805602, 3.40897, 1 ),
"update": 0,
"values": [ Vector2( -334, 612.5 ), Vector2( 264, 612.5 ), Vector2( 864, 612.5 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title_label/Logo/Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 77, 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title_label/Logo/Panel:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title_label/Logo/Label:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 216, 55 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Title_label/Logo/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Title_label/Logo/Label:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 45 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "logo_fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Title_label/Logo/Panel:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.334645, 1.60092, 1 ),
"update": 0,
"values": [ Vector2( 1, 10 ), Vector2( 144, 10 ), Vector2( 144, 161 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title_label/Logo/Label:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 2.44501, 1 ),
"update": 0,
"values": [ Vector2( 216, 55 ), Vector2( 216, 55 ), Vector2( 403, 55 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title_label/Logo/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 23.0822, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "logo_lable_floating"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title_label/Logo/Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 0.517142, 2.20865, 0.505718, 1.56768 ),
"update": 0,
"values": [ Vector2( 0, 45 ), Vector2( 0, 37 ), Vector2( 0, 45 ), Vector2( 0, 53 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.316148 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.721569 ) ]
}

[sub_resource type="DynamicFont" id=29]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.6, 0.6, 0.6, 0.309804 )

[sub_resource type="DynamicFont" id=31]
size = 23
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flying_objects" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D29" parent="Flying_objects" instance=ExtResource( 6 )]
position = Vector2( 89, 372 )

[node name="Node2D30" parent="Flying_objects" instance=ExtResource( 6 )]
visible = false
position = Vector2( 657, 372 )

[node name="Title_label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.529412 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -201.5
margin_top = 40.0
margin_right = 201.5
margin_bottom = 95.0
theme = ExtResource( 3 )
text = "Welcome to"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Control" parent="Title_label"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 56.0
margin_bottom = 209.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Title_label/Logo"]
anchor_bottom = 1.0
margin_left = 77.0
margin_top = 14.0
margin_right = 78.0
margin_bottom = -184.0
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Title_label/Logo/Panel"]
anchor_right = 1.0
margin_bottom = 35.0
custom_styles/panel = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="Title_label/Logo/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
custom_styles/panel = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title_label/Logo"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -59.0
margin_right = -187.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
text = "Something"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title_label/Logo/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -201.5
margin_top = -7.0
margin_right = 201.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 20 )
text = "CHAT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login_label" type="Label" parent="."]
modulate = Color( 0.633529, 0.892593, 0.794725, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -226.5
margin_top = 432.0
margin_right = 214.5
margin_bottom = 487.0
theme = ExtResource( 3 )
text = "Login to Your Account"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegNo_label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -75.5
margin_right = -9.99982
margin_bottom = -20.5
theme = ExtResource( 3 )
text = "REG NO.:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegNo_lineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -544.0
margin_top = -16.0
margin_right = -58.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 5 )
placeholder_text = "enter registeration number"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password_label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 92.5
margin_right = 51.0001
margin_bottom = 147.5
theme = ExtResource( 3 )
text = "PASSWORD:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password_lineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -544.0
margin_top = 152.0
margin_right = -58.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 5 )
placeholder_text = "enter password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login_button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -171.0
margin_top = 92.0
margin_right = 171.0
margin_bottom = 193.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 2 )
text = "LOGIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification_label" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -368.0
margin_top = -84.0
margin_right = 368.0
margin_bottom = -48.0
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit_animation" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 6 )
anims/pwd_active = SubResource( 9 )
anims/reg_active = SubResource( 7 )

[node name="Button_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/login_button_fade_in = SubResource( 13 )

[node name="Credentials_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/credencials_fade_in = SubResource( 15 )
anims/name_info_fade_in = SubResource( 28 )

[node name="Logo_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 21 )
anims/logo_fade_in = SubResource( 22 )
anims/logo_lable_floating = SubResource( 23 )

[node name="Login_request" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.12549, 0.172549, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scene_trans_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 26 )
anims/fade_out = SubResource( 27 )

[node name="Welcome_label" type="Label" parent="."]
self_modulate = Color( 0.468676, 0.681076, 0.600622, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -27.5
margin_right = -120.0
margin_bottom = 27.5
theme = ExtResource( 3 )
text = "Welcome"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info_label" type="Label" parent="Welcome_label"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_button" type="Button" parent="."]
margin_right = 90.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 29 )
custom_styles/normal = SubResource( 30 )
icon = ExtResource( 7 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contact_button" type="Button" parent="."]
modulate = Color( 0.339501, 0.72818, 0.580953, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -119.0
margin_top = -48.0
margin_right = 119.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 31 )
custom_styles/normal = SubResource( 32 )
text = "Contact and Feedback"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="RegNo_lineEdit" to="." method="_on_RegNo_lineEdit_focus_entered"]
[connection signal="focus_entered" from="Password_lineEdit" to="." method="_on_Password_lineEdit_focus_entered"]
[connection signal="pressed" from="Login_button" to="." method="_on_Login_button_pressed"]
[connection signal="request_completed" from="Login_request" to="." method="_on_Login_request_request_completed"]
[connection signal="pressed" from="Back_button" to="." method="_on_Back_button_pressed"]
[connection signal="pressed" from="Contact_button" to="." method="_on_Contact_button_pressed"]
